# spock-example

./: .gitignore  spock-example.cabal
app/: Main.hs
app-add-data/: Main.hs  articles.json  authors.json
