cabal-version:      2.4
name:               spock-example
version:            0.1.0.0

-- A short (one-line) description of the package.
-- synopsis:

-- A longer description of the package.
-- description:

-- A URL where users can report bugs.
-- bug-reports:

-- The license under which the package is released.
-- license:

-- The package author(s).
-- author:

-- An email address to which users can send suggestions, bug reports, and patches.
-- maintainer:

-- A copyright notice.
-- copyright:
-- category:
extra-source-files: CHANGELOG.md

executable spock-example
    main-is:          Main.hs

    -- Modules included in this executable, other than Main.
    -- other-modules:

    -- LANGUAGE extensions used by modules in this package.
    -- other-extensions:
    build-depends:    base ^>=4.14.3.0
                    , aeson
                    , Spock
                    , text
                    , monad-logger
                    , persistent
                    , persistent-sqlite
                    , persistent-template
                    , time
                    , request
                    , bytestring
    hs-source-dirs:   app
    default-language: Haskell2010

executable add-data
    main-is:          Main.hs

    -- Modules included in this executable, other than Main.
    -- other-modules:

    -- LANGUAGE extensions used by modules in this package.
    -- other-extensions:
    build-depends:    base ^>=4.14.3.0
                    , request
                    , bytestring
                    , text
                    , aeson
                    , http-client
                    , http-types
                    , time
                    , directory
    hs-source-dirs:   app-add-data
    default-language: Haskell2010